completed vaccine section

--- a/index.html
+++ b/index.html
@@ -142,7 +142,6 @@
                   ><span class="ms-1 d-none d-md-inline"> Vaccine</span></a
                 >
               </li>
-
               <li class="dropdown">
                 <a
                   href="#"
@@ -201,7 +200,7 @@
           <main class="row overflow-auto">
             <!-- Main content here -->
             <!-- Map -->
-            <section id="map-container" class="d-none p-0 main-display-element">
+            <section id="map-container" class="p-0 main-display-element">
               <div id="map">
                 <div
                   class="
@@ -460,21 +459,187 @@
               </div>
             </section>
             <!-- vaccine -->
-            <section id="vaccine" class="p-0 main-display-element">
-              <!-- TODO: div for new page for single page view toggle -->
+            <section id="vaccine" class="d-none p-0 main-display-element">
               <div id="vaccine-wrapper" class="d-inline d-lg-flex h-100">
-                <div class="vaccine col-12 d-inline d-lg-flex">
-                  <div class="col-12 col-lg-6 bg-white h-100">Col 1-1</div>
-                  <div class="col-12 col-lg-6 bg-dark h-100">Col 1-2</div>
+                <!-- vaccine 1 -->
+                <div class="vaccine-option col-12 col-lg-6 d-lg-flex">
+                  <div class="col-12 h-50">
+                    <div class="col-12 h-100">
+                      <div
+                        class="
+                          col-12
+                          d-flex
+                          align-items-center
+                          justify-content-center
+                          pt-5
+                        "
+                      >
+                        <img
+                          src="images/covaxin.png"
+                          class="img-fluid vaccine-image pt-5"
+                          alt="coronavirus-covid-19"
+                        />
+                      </div>
+                    </div>
+                    <div class="col-12 h-50">
+                      <div class="wrapper">
+                        <div class="card-body">
+                          <h5 class="card-title">COVAXIN</h5>
+                          <p class="card-text">
+                            Covaxin (codenamed as BBV152) is an inactivated
+                            virus-based COVID-19 vaccine developed by Bharat
+                            Biotech in collaboration with the Indian Council of
+                            Medical Research.
+                          </p>
+                          <p class="card-text">
+                            In July 2021, Bharat Biotech reported the vaccine to
+                            be 64% (95% CI, 29–82%) effective against
+                            asymptomatic cases, 78% (65–86%) effective against
+                            symptomatic cases, 93% (57–100%) effective against
+                            severe COVID-19 infection, and 65% (33–83%)
+                            effective against the Delta variant.
+                          </p>
+                          <p class="card-text">
+                            As an inactivated vaccine, Covaxin uses a more
+                            traditional technology that is similar to the
+                            inactivated polio vaccine.
+                          </p>
+                          <p>
+                            <small>
+                              * Extracted from wikipedia.org/wiki/Covaxin
+                            </small>
+                          </p>
+                          <a
+                            href="https://en.wikipedia.org/wiki/Covaxin"
+                            class="btn btn-primary"
+                            >Read More</a
+                          >
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <div class="vaccine col-12 d-inline d-lg-flex">
-                  <div class="col-12 col-lg-6 bg-white h-100">Col 2-1</div>
-                  <div class="col-12 col-lg-6 bg-dark h-100">Col 2-2</div>
+                <!-- vaccine 2 -->
+                <div class="vaccine-option col-12 col-lg-6 d-lg-flex">
+                  <div class="col-12 h-100">
+                    <div class="col-12 h-50">
+                      <div
+                        class="
+                          col-12
+                          h-100
+                          d-flex
+                          align-items-center
+                          justify-content-center
+                        "
+                      >
+                        <img
+                          src="images/covishield.jpg"
+                          class="img-fluid vaccine-image"
+                          alt="coronavirus-covid-19"
+                        />
+                      </div>
+                    </div>
+                    <div class="col-12 h-50">
+                      <div class="col-12 h-50">
+                        <div class="wrapper">
+                          <div class="card-body">
+                            <h5 class="card-title">COVISHIELD</h5>
+                            <p class="card-text">
+                              The Oxford–AstraZeneca COVID-19 vaccine, codenamed
+                              AZD1222,[5] and sold under the brand names
+                              Covishield and Vaxzevria among others, is a viral
+                              vector vaccine for prevention of COVID-19.
+                              Developed in the United Kingdom by the Oxford
+                              University and British-Swedish company
+                              AstraZeneca, it is given by intramuscular
+                              injection, using as a vector the modified
+                              chimpanzee adenovirus ChAdOx1.
+                            </p>
+                            <p class="card-text">
+                              Studies carried out in 2020 showed that the
+                              efficacy of the vaccine is 76.0% at preventing
+                              symptomatic COVID-19 beginning at 22 days
+                              following the first dose and 81.3% after the
+                              second dose.
+                            </p>
+                            <p>
+                              <small>
+                                * Extracted from
+                                en.wikipedia.org/wiki/Oxford–AstraZeneca_COVID-19_vaccine
+                              </small>
+                            </p>
+                            <a
+                              href="https://en.wikipedia.org/wiki/Oxford%E2%80%93AstraZeneca_COVID-19_vaccine"
+                              class="btn btn-primary"
+                              >Read More</a
+                            >
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <div class="vaccine col-12 d-inline d-lg-flex">
-                  <div class="col-12 col-lg-6 bg-white h-100">Col 3-1</div>
-                  <div class="col-12 col-lg-6 bg-dark h-100">Col 3-2</div>
+                <!-- vaccine 3 -->
+                <div class="vaccine-option col-12 col-lg-6 d-lg-flex">
+                  <div class="col-12 h-100">
+                    <div class="col-12 h-50">
+                      <div class="col-12 h-50">
+                        <div
+                          class="
+                            col-12
+                            d-flex
+                            align-items-center
+                            justify-content-center
+                            pt-5
+                          "
+                        >
+                          <img
+                            id="sputnik-img"
+                            src="images/sputnik.png"
+                            class="img-fluid vaccine-image pt-3"
+                            alt="coronavirus-covid-19"
+                          />
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-12 h-50">
+                      <div class="wrapper">
+                        <div class="card-body">
+                          <h5 class="card-title">SPUTNIK-V</h5>
+                          <p class="card-text">
+                            Sputnik V (Russian: Спутник V) or Gam-COVID-Vac
+                            (Russian: Гам-КОВИД-Вак) is an adenovirus viral
+                            vector vaccine for COVID-19 developed by the
+                            Gamaleya Research Institute of Epidemiology and
+                            Microbiology in Russia. It is the world's first
+                            registered combination vector vaccine for the
+                            prevention of COVID-19, having been registered on 11
+                            August 2020 by the Russian Ministry of Health.
+                          </p>
+                          <p class="card-text">
+                            Gam-COVID-Vac was initially approved for
+                            distribution in Russia and then in 59 other
+                            countries (as of April 2021) on the preliminary
+                            results of Phase I–II studies eventually published
+                            on 4 September 2020.
+                          </p>
+                          <p>
+                            <small
+                              >Extracted from
+                              en.wikipedia.org/wiki/Sputnik_V_COVID-19_vaccine</small
+                            >
+                          </p>
+                          <a
+                            href="https://en.wikipedia.org/wiki/Sputnik_V_COVID-19_vaccine"
+                            class="btn btn-primary"
+                            >Read More</a
+                          >
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
+              </div>
             </section>
           </main>
         </div>
