--- a/index.html
+++ b/index.html
@@ -727,11 +727,24 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <!-- heatmap JS -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/heatmap.js/2.0.0/heatmap.min.js"
+      integrity="sha512-FpvmtV53P/z7yzv1TAIVH7PNz94EKXs5aV6ts/Zi+B/VeGU5Xwo6KIbwpTgKc0d4urD/BtkK50IC9785y68/AA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <!-- Leaflet JS -->
     <script
       src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
       integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
       crossorigin=""
+    ></script>
+    <!-- leaflet heatmap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/leaflet-heatmap@1.0.0/leaflet-heatmap.js"
+      integrity="sha256-8uGkuaHZ33DM5LlG5UikMP+Zs7/I7ryxVB0kFJObapg="
+      crossorigin="anonymous"
     ></script>
     <!-- Leaflet markercluster JS -->
     <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster-src.js"></script>
@@ -754,7 +767,7 @@
     <!-- JS -->
     <script src="scripts/functions.js"></script>
     <script src="scripts/map.js"></script>
-    <script src="scripts/script.js"></script>
     <script src="scripts/charts.js"></script>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
