--- a/index.html
+++ b/index.html
@@ -765,6 +765,7 @@
     <!-- datetime-slot-picker JavaScript -->
     <script src="https://unpkg.com/datetime-slot-picker/dist/datetime-slot-picker/datetime-slot-picker.js"></script>
     <!-- JS -->
+    <script src="scripts/const.js"></script>
     <script src="scripts/functions.js"></script>
     <script src="scripts/map.js"></script>
     <script src="scripts/charts.js"></script>
