added legend for heatmap

--- a/index.html
+++ b/index.html
@@ -234,6 +234,20 @@
                     </div>
                   </div>
                 </div>
+                <!-- heatmap legend -->
+                <div
+                  id="heatmap-legend"
+                  class="legend-area bg-light rounded p-1 d-none"
+                >
+                  <div
+                    id="min-max-wrapper"
+                    class="d-flex justify-content-between"
+                  >
+                    <span id="min"></span>
+                    <span id="max"></span>
+                  </div>
+                  <img id="gradient" src="" class="w-100" />
+                </div>
               </div>
             </section>
             <!-- statistics -->
